# Balinese-Wariga

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  build-android.sh
asset/tester-ref/: WarigaRef.csv  WarigaRef.ods
cmake/: Packing.cmake
docs/html/: README_8md.html  annotated.html  build_2__CPack__Packages_2Linux_2DEB_2WarigaBali-lib-1_81_80-Linux_2usr_2include_2pawukon_8hpp.html  build_2__CPack__Packages_2Linux_2DEB_2WarigaBali-lib-1_81_80-Linux_2usr_2include_2pawukon_8hpp__dep__incl.map  build_2__CPack__Packages_2Linux_2DEB_2WarigaBali-lib-1_81_80-Linux_2usr_2include_2pawukon_8hpp__dep__incl.md5  build_2__CPack__Packages_2Linux_2DEB_2WarigaBali-lib-1_81_80-Linux_2usr_2include_2pawukon_8hpp__incl.map  build_2__CPack__Packages_2Linux_2DEB_2WarigaBali-lib-1_81_80-Linux_2usr_2include_2pawukon_8hpp__incl.md5  build_2__CPack__Packages_2Linux_2DEB_2WarigaBali-lib-1_81_80-Linux_2usr_2include_2pawukon_8hpp_source.html  build_2__CPack__Packages_2Linux_2DEB_2WarigaBali-lib-1_81_80-Linux_2usr_2include_2wariga_8hpp.html  build_2__CPack__Packages_2Linux_2DEB_2WarigaBali-lib-1_81_80-Linux_2usr_2include_2wariga_8hpp__incl.map  build_2__CPack__Packages_2Linux_2DEB_2WarigaBali-lib-1_81_80-Linux_2usr_2include_2wariga_8hpp__incl.md5  build_2__CPack__Packages_2Linux_2DEB_2WarigaBali-lib-1_81_80-Linux_2usr_2include_2wariga_8hpp_source.html  build_2__CPack__Packages_2Linux_2DEB_2WarigaBali-lib-1_81_80-Linux_2usr_2include_2wewaran_8hpp.html  build_2__CPack__Packages_2Linux_2DEB_2WarigaBali-lib-1_81_80-Linux_2usr_2include_2wewaran_8hpp__dep__incl.map  build_2__CPack__Packages_2Linux_2DEB_2WarigaBali-lib-1_81_80-Linux_2usr_2include_2wewaran_8hpp__dep__incl.md5  build_2__CPack__Packages_2Linux_2DEB_2WarigaBali-lib-1_81_80-Linux_2usr_2include_2wewaran_8hpp_source.html  classBalineseWewaran-members.html  classBalineseWewaran.html  classPawukon-members.html  classPawukon.html  classPawukon__inherit__graph.map  classPawukon__inherit__graph.md5  classWariga-members.html  classWariga.html  classWariga__coll__graph.map  classWariga__coll__graph.md5  classWariga__inherit__graph.map  classWariga__inherit__graph.md5  classes.html  dir_0e84141a2feea3d0684990c727ed3fef.html  dir_2d35da5f540c7562864e46e14ad019ec.html  dir_5fc34d91268caa7490526b777b01fe0c.html  dir_821ec5e08fc2a31fb47062e847f38257.html  dir_84ff6b52283d48f031abf414c86f6763.html  dir_a79e3d44313776c7555d0844e3cdd23d.html  dir_b7fc21c143b614a8e109b9b46e815c02.html  dir_bbe58f746f9e74cddc9bb97eaff92f27.html  dir_c0830fafb8461e3cbf6020167f3d2460.html  files.html  functions.html  (+28 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  files_0.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  pages_0.js  searchdata.js  typedefs_0.js  typedefs_1.js  variables_0.js  (+9 more)
examples/: main.cpp
include/: wariga.hpp  wewaran.hpp
package/: warigabali-lib_1.1.0_amd64.deb
src/: pawukon.cpp  wariga.cpp  wewaran.cpp
test/: pawukon-test.cpp  wariga-test-1945.cpp  wariga-test-2024.cpp  wariga-test-common.cpp  wewaran-test.cpp
